--- a/client/.env.local
+++ b/client/.env.local
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
+NEXT_PUBLIC_COGNITO_USER_POOL_ID="us-east-1_m0vrCIUJE"
+NEXT_PUBLIC_COGNITO_USER_POOL_CLIENT_ID="3snpmqob1qh710c8d8qskot943"
