--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.2.0",
+    "@clerk/nextjs": "^6.5.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
@@ -24,10 +25,12 @@
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "numeral": "^2.0.6",
+    "oidc-client-ts": "^3.1.0",
     "react": "^18",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-oidc-context": "^3.2.0",
     "react-redux": "^9.1.2",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0"
