--- a/client/.env.local
+++ b/client/.env.local
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
-NEXT_PUBLIC_COGNITO_USER_POOL_ID="us-east-1_wUJyfLSRF"
-NEXT_PUBLIC_COGNITO_USER_POOL_CLIENT_ID="168h26v0brcut9fb9ehsvage9l"
+NEXT_PUBLIC_COGNITO_USER_POOL_ID="us-east-1_QxRbUxhd7"
+NEXT_PUBLIC_COGNITO_USER_POOL_CLIENT_ID="50m198l7rjvnr9vejs4oqlc7bh"
